# My_Repo_3

./: .gitignore  .gitmodules  README.md
.github/workflows/: bank-account-action.yml  my-action.yml
Bash/Bash_Course/Section1_Basics/: backup_script  our_first_script
Bash/Bash_Course/Section2_Variables_And_Shell_Expansions/: arithmetic_script.sh  backup_script  brace_expansion.sh  substitution_script.sh  variable_practice.sh
Bash/Bash_Course/Section3_How_Bash_Processes_Command_Lines/: command_identification.sh  expansions.sh  globbing.sh  quoting.sh  redirection.sh  word_splitting.sh
CICD_Training/: test.py
CMake_Training/CMake_Course/CMake/001Hello_World/: CMakeLists.txt
CMake_Training/CMake_Course/CMake/002Basic_Project/: CMakeLists.txt  my_lib.h
CMake_Training/CMake_Course/CMake/003Intermediate_Project/: CMakeLists.txt
CMake_Training/CMake_Course/CMake/003Intermediate_Project/app/: CMakeLists.txt
CMake_Training/CMake_Course/CMake/003Intermediate_Project/src/my_lib/: CMakeLists.txt
CMake_Training/CMake_Course/CMake/004Variables_And_Options/: CMakeLists.txt
CMake_Training/CMake_Course/CMake/004Variables_And_Options/src/my_lib/: CMakeLists.txt
CMake_Training/CMake_Course/CMake/005Configure_File/app/: CMakeLists.txt  main.cc
CMake_Training/CMake_Course/CMake/005Configure_File/configured/: config.hpp.in
CMake_Training/CMake_Course/CMake/006Sources_And_Headers/: CMakeLists.txt
CMake_Training/CMake_Course/CMake/006Sources_And_Headers/app/: CMakeLists.txt
CMake_Training/CMake_Course/CMake/006Sources_And_Headers/src/: CMakeLists.txt
CMake_Training/CMake_Course/CMake/006Sources_And_Headers/src/my_lib/: CMakeLists.txt
CMake_Training/CMake_Course/CMake/007External_Git/: CMakeLists.txt
CMake_Training/CMake_Course/CMake/007External_Git/app/: CMakeLists.txt  main.cc
CMake_Training/CMake_Course/CMake/007External_Git/cmake/: AddGitSubmodule.cmake
CMake_Training/CMake_Course/CMake/007External_Git/configured/: CMakeLists.txt
CMake_Training/CMake_Course/CMake/999Bank_Account/: CMakeLists.txt  Makefile
CMake_Training/CMake_Course/CMake/999Bank_Account/inc/: CMakeLists.txt  account.h  account_ext.h  constants.h  helpers.h
CMake_Training/CMake_Course/CMake/999Bank_Account/src/: CMakeLists.txt  account.cpp  helpers.cpp  main.cpp
CPP_Training/001CPP_Various_Testing/: Makefile
CPP_Training/001CPP_Various_Testing/src/: main.cpp
CPP_Training/002Bank_Account/: Dockerfile  Makefile  run.py  run_GithubActions.py
CPP_Training/002Bank_Account/inc/: account.h  account_ext.h  helpers.h
CPP_Training/002Bank_Account/src/: account.cpp  account_ext.cpp  helpers.cpp  main.cpp
CPP_Training/002Bank_Account/tests/: Makefile
CPP_Training/002Bank_Account/tests/account/: Makefile  test.cpp
CPP_Training/002Bank_Account/tests/account_ext/: Makefile  main.cpp  test.cpp
C_Unit_Testing/: Makefile
C_Unit_Testing/src/: main.c
C_Unit_Testing/src/average/: average.c
C_Unit_Testing/tests/: Makefile
C_Unit_Testing/tests/average/: Makefile  test.cpp
Docker_Training/Hello_Docker/: Dockerfile  another_test.py  main.c  test.py
Embedded C/RTOS_Workspace/: Includepathsettings.xml
Embedded C/RTOS_Workspace/.metadata/: .log4j.xml  version.ini
Embedded C/RTOS_Workspace/.metadata/.plugins/org.eclipse.cdt.core/: 001Tasks.1673880938093.pdom  FreeRTOS_Projects.language.settings.xml
Embedded C/RTOS_Workspace/.metadata/.plugins/org.eclipse.core.resources/: 3.snap
Embedded C/RTOS_Workspace/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Embedded C/RTOS_Workspace/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Embedded C/RTOS_Workspace/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Embedded C/RTOS_Workspace/001Tasks/: .cproject  001Tasks.ioc  STM32G474RETX_FLASH.ld
Embedded C/RTOS_Workspace/001Tasks/Core/Inc/: main.h  stm32g4xx_it.h
Embedded C/RTOS_Workspace/001Tasks/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Embedded C/RTOS_Workspace/002LED_Tasks/: .cproject  002LED_Tasks.ioc
Embedded C/RTOS_Workspace/002LED_Tasks/Core/Inc/: stm32g4xx_it.h
Embedded C/RTOS_Workspace/002LED_Tasks/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Embedded C/RTOS_Workspace/003LED_Block_Tasks/: .cproject  003LED_Block_Tasks.ioc  STM32G474RETX_RAM.ld
Embedded C/RTOS_Workspace/003LED_Block_Tasks/Core/Inc/: FreeRTOSConfig.h
Embedded C/RTOS_Workspace/003LED_Block_Tasks/Core/Src/: main.c
Embedded C/RTOS_Workspace/004LED_Task_Notify/: .cproject  004LED_Task_Notify.ioc
Embedded C/RTOS_Workspace/004LED_Task_Notify/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Embedded C/RTOS_Workspace/005LED_Btn_ISR/: .cproject  .project  005LED_Btn_ISR.ioc
Embedded C/RTOS_Workspace/005LED_Btn_ISR/Core/Src/: main.c  stm32g4xx_it.c
Embedded C/RTOS_Workspace_Updated/: Segger_Readme.md
Embedded C/RTOS_Workspace_Updated/RTOS_Basis/: .cproject  RTOS_Basis.ioc
Embedded C/RTOS_Workspace_Updated/RTOS_Basis/Core/Inc/: FreeRTOSConfig.h  main.h
Embedded C/RTOS_Workspace_Updated/RTOS_Basis/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Embedded C/RTOS_Workspace_Updated/RTOS_Queues/: .cproject  .mxproject  .project  RTOS_Queues.ioc
Embedded C/RTOS_Workspace_Updated/RTOS_Queues/Core/Inc/: stm32g4xx_it.h
Embedded C/RTOS_Workspace_Updated/RTOS_Queues/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Embedded C/RTOS_Workspace_Updated/RTOS_Queues/Sysview Files/: Trace01.SVdat  Trace02.SVdat  Trace03.SVdat  Trace04.SVdat
Makefile_Training/001Hello_World/: Makefile
Makefile_Training/002Basic_Structure/: Makefile  my_lib.c
Makefile_Training/003Compiler_Flags/: Makefile  main.c
Makefile_Training/005Wildcard_Files_Part2/: Makefile  my_lib.c
Makefile_Training/006Makefile_Template/: Makefile
Makefile_Training/007Better_Makefile_Template/: Makefile
Makefile_Training/007Better_Makefile_Template/inc/: my_lib.h
Makefile_Training/008Test_Project/: Makefile
Makefile_Training/008Test_Project/inc/: Test.h
Makefile_Training/008Test_Project/src/: Test.c  main.c
(+10 files in other folders)
